# OpenLibraryHub-CLI-CPP

./: .gitignore  CMakeLists.txt  Makefile  OpenLibraryHub.sln  OpenLibraryHub.vcxproj  OpenLibraryHub.vcxproj.filters  README.md  database.sql  getlib  olh.properties  run
Headers/: BookDAO.h  BookEntity.h  Books.h  Config.h  Home.h  Util.h
Source/: BookDAO.cpp  BookEntity.cpp  Books.cpp  Home.cpp  OpenLibraryHub.cpp  Util.cpp
include/: Config.hpp  Database.hpp  DatabaseManager.hpp  DbConfig.hpp  Util.hpp  config.h  dao.h  entities.h  main.h  util.h
include/dao/: AlunoDAO.hpp  BookDAO.hpp  ClassDAO.hpp  DAO.hpp  EmprestimoDAO.hpp  LivroDAO.hpp  LoanDAO.hpp  StudentDAO.hpp  TurmaDAO.hpp
include/entities/: AlunoEntity.hpp  BookEntity.hpp  ClassEntity.hpp  EmprestimoEntity.hpp  Entity.hpp  LivroEntity.hpp  LoanEntity.hpp  StudentEntity.hpp  TurmaEntity.hpp
include/olh/: config.hpp  database.hpp  db_config.hpp  util.hpp
include/olh/dao/: book_dao.hpp  dao.hpp
include/olh/entities/: book_entity.hpp  entity.hpp
include/olh/screens/: books.hpp  home.hpp  others.hpp
include/openlibraryhub/: book_dao.h  book_entity.h  books.h  config.h  database.h  home.h  util.h
include/openlibraryhub/dao/: book_dao.h  dao.h
include/openlibraryhub/entities/: book_entity.h  entity.h
include/openlibraryhub/screens/: books.h  home.h  others.h
include/screens/: Alunos.hpp  Books.hpp  CRUDScreen.hpp  Classes.hpp  Emprestimos.hpp  Home.hpp  Livros.hpp  Loans.hpp  Others.hpp  Outros.hpp  Screen.hpp  Students.hpp  Turmas.hpp
src/: .clangd  Config.cpp  Config.hpp  Database.cpp  Database.hpp  DatabaseManager.cpp  DbConfig.hpp  Util.cpp  Util.hpp  config.h  dao.cpp  entities.cpp  main.cc  main.cpp  main.h  util.cpp
src/dao/: AlunoDAO.cpp  AlunoDAO.hpp  BookDAO.cpp  ClassDAO.cpp  EmprestimoDAO.cpp  EmprestimoDAO.hpp  LivroDAO.cpp  LivroDAO.hpp  LoanDAO.cpp  StudentDAO.cpp  TurmaDAO.cpp  TurmaDAO.hpp
src/entities/: AlunoEntity.cpp  AlunoEntity.hpp  BookEntity.cpp  ClassEntity.cpp  EmprestimoEntity.cpp  EmprestimoEntity.hpp  LivroEntity.cpp  LivroEntity.hpp  LoanEntity.cpp  StudentEntity.cpp  TurmaEntity.cpp  TurmaEntity.hpp
src/olh/: config.cpp  database.cpp  util.cpp
src/olh/dao/: book_dao.cpp
src/olh/entities/: book_entity.cpp
src/olh/screens/: books.cpp  home.cpp  others.cpp
src/openlibraryhub/: book_dao.cpp  book_entity.cpp  books.cpp  database.cc  home.cpp  main.cpp  util.cc  util.cpp
src/openlibraryhub/dao/: book_dao.cc
src/openlibraryhub/entities/: book_entity.cc
src/openlibraryhub/screens/: books.cc  home.cc  others.cc
src/screens/: Alunos.cpp  Alunos.hpp  Books.cpp  Classes.cpp  Emprestimos.cpp  Emprestimos.hpp  Home.cpp  Home.hpp  Livros.cpp  Livros.hpp  Loans.cpp  Others.cpp  Outros.cpp  Outros.hpp  Students.cpp  Turmas.cpp  Turmas.hpp
